--- a/native/rustler_elixir_fun/Cargo.toml
+++ b/native/rustler_elixir_fun/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [lib]
 name = "rustler_elixir_fun"
 path = "src/lib.rs"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "lib"]
 
 [dependencies]
 rustler = "0.25.0"
