--- a/native/rustler_elixir_fun/Cargo.toml
+++ b/native/rustler_elixir_fun/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rustler_elixir_fun"
 version = "0.1.0"
-authors = []
+authors = ["Qqwy/Wiebe-Marten Wijnja"]
 edition = "2018"
 
 [lib]
@@ -12,3 +12,4 @@ crate-type = ["cdylib", "lib"]
 [dependencies]
 rustler = "0.25.0"
 rustler_sys = "2.2.0"
+rustler_stored_term = {path = "./rustler_stored_term/", version = "0.1.0"}
