Rename wrapper that is called as NIF rustler_elixir_fun_nif

--- a/native/rustler_elixir_fun_nif/Cargo.toml
+++ b/native/rustler_elixir_fun_nif/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Qqwy/Wiebe-Marten Wijnja"]
 edition = "2018"
 
 [lib]
-name = "rustler_elixir_fun"
+name = "rustler_elixir_fun_nif"
 path = "src/lib.rs"
 crate-type = ["cdylib"]
 
