--- a/native/rustler_elixir_fun_nif/rustler_elixir_fun/Cargo.toml
+++ b/native/rustler_elixir_fun_nif/rustler_elixir_fun/Cargo.toml
@@ -2,6 +2,10 @@
 name = "rustler_elixir_fun"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "Call Elixir functions from NIFs implemented in Rust."
+repository = "https://github.com/Qqwy/elixir-rustler_elixir_fun"
+authors = ["Qqwy/Wiebe-Marten Wijnja"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
