--- a/native/rustler_elixir_fun_nif/rustler_stored_term/Cargo.toml
+++ b/native/rustler_elixir_fun_nif/rustler_stored_term/Cargo.toml
@@ -2,6 +2,10 @@
 name = "rustler_stored_term"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "Store arbitrary Elixir/Erlang terms inside any Rust datastructures you might be using inside your NIFs."
+repository = "https://github.com/Qqwy/elixir-rustler_elixir_fun"
+authors = ["Qqwy/Wiebe-Marten Wijnja"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
