--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,4 @@ jobs:
           mix deps.get
           mix deps.compile
       - run: mix compile
-      # - run: mix test # Testing is already done as part of the next task:
-      - run: mix coveralls.github
+      - run: mix test
