Path overrides to make sure we don't depend on dev artefacts in the published package

--- a/native/rustler_elixir_fun_nif/Cargo.toml
+++ b/native/rustler_elixir_fun_nif/Cargo.toml
@@ -12,5 +12,5 @@ crate-type = ["cdylib"]
 [dependencies]
 rustler = "0.25.0"
 rustler_sys = "2.2.0"
-rustler_elixir_fun = {path = "./rustler_elixir_fun", version = "0.1.0"}
-rustler_stored_term = {path = "./rustler_stored_term/", version = "0.1.0"}
+rustler_elixir_fun = "0.1.0"
+rustler_stored_term = "0.1.0"
